--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,16 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
-
-version = "1.0.0"
-group = "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+// Taken from https://semver.org
+// Given a version number MAJOR.MINOR.PATCH, increment the:
+//	 MAJOR version when you make incompatible API changes,
+//	 MINOR version when you add functionality in a backwards-compatible manner, and
+//	 PATCH version when you make backwards-compatible bug fixes.
+// Additional labels for pre-release and build metadata are available as extensions to the MAJOR.MINOR.PATCH format.
+// We use the format MCVERSION-MAJOR.MINOR.PATCH
+version = "1.12.2-0.1.0"
+group = "mod.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "Mod Name"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
@@ -21,16 +27,25 @@ compileJava {
 }
 
 minecraft {
-    version = "1.12.2-14.23.5.2768"
+
+    version = "1.12.2-14.23.5.2768" // Latest Stable
+
     runDir = "run"
-    
+
     // the mappings can be changed at any time, and must be in the following format.
-    // snapshot_YYYYMMDD   snapshot are built nightly.
-    // stable_#            stables are built at the discretion of the MCP team.
+    // snapshot_YYYYMMDD	snapshot are built nightly.
+    // stable_#				stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20180814"
+
+    // mappings = "snapshot_20180814" // Latest 1.12.x Mappings
+    mappings = "stable_39" // Latest stable 1.12.x Mappings
+    // mappings = "snapshot_20171003" // Default mappings for 1.12.x
+
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+
+    replace "@VERSION@", project.version
+    replaceIn "io/github/cadiboo/examplemod/util/ModReference.java"
 }
 
 dependencies {
