extra jar signing stuff

--- a/gradle-keystore-gradle.properties
+++ b/gradle-keystore-gradle.properties
@@ -1,6 +1,11 @@
 # This file should go in your global gradle cache named "gradle.properties"
 # My file is located at /Users/Cadiboo/.gradle/gradle.properties
 
+# Take a look at
+# https://tutorials.darkhax.net/tutorials/jar_signing/
+# and
+# https://mcforge.readthedocs.io/en/latest/concepts/jarsigning/
+
 # The full path to your keystore
 # Mine is /Users/Cadiboo/Modding/keystore.jks
 keyStore=/Full/Path/To/keystore.jks
