--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,40 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
+
+# Taken from https://semver.org
+# Given a version number MAJOR.MINOR.PATCH, increment the:
+#	 MAJOR version when you make incompatible API changes,
+#	 MINOR version when you add functionality in a backwards-compatible manner, and
+#	 PATCH version when you make backwards-compatible bug fixes.
+# Additional labels for pre-release and build metadata are available as extensions to the MAJOR.MINOR.PATCH format.
+# We use the format MCVERSION-MAJOR.MINOR.PATCH
+modVersion = 0.1.0
+
+# The maven group of your mod
+# See "http://maven.apache.org/guides/mini/guide-naming-conventions.html"
+modGroup = mod.yourname.modid
+
+# The name of the mod file (excluding the version)
+# Maven and Gradle don't like spaces in filenames, so use a different separator character like '-'
+modFileName = Mod-Name
+
+# The version of Minecraft we are modding for
+modMinecraftVersion = 1.12.2
+
+# The MCP Mappings the source code of the mod will be built against
+# MCP Mappings are in the format
+# snapshot_YYYYMMDD
+# stable_#
+# Snapshot are built nightly and stables are built at the discretion of the MCP team
+# to change your mappings change the mcpMappings property and rerun your setup (setupDecompWorkspace & setup IDE)
+# Latest 1.12.x Mappings are "snapshot_20180814"
+# Latest stable 1.12.x Mappings are "stable_39"
+# Default 1.12.x Mappings are "snapshot_20171003"
+modMcpMappings = stable_39
+
+# The class in which the "@VERSION@" and "@FINGERPRINT@" strings should be replaced
+modReferenceClass = io/github/cadiboo/examplemod/util/ModReference.java
+
+# The Forge version the mod is being made for
+modForgeVersion = 14.23.5.2768
