--- a/gradle.properties
+++ b/gradle.properties
@@ -38,3 +38,6 @@ modReferenceClass = io/github/cadiboo/examplemod/util/ModReference.java
 
 # The Forge version the mod is being made for
 modForgeVersion = 14.23.5.2768
+
+kotlinVersion = 1.0.3
+forgelinVersion = 1.5.1
