--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,12 @@ buildscript {
 	}
 	dependencies {
 		classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
 	}
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
-//Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
+apply plugin: "kotlin"
+//Only edit below this line, the above code adds and enables the necessary things for Forge and Kotlin to be setup.
 
 version = modMinecraftVersion + "-" + modVersion
 group = modGroup
@@ -18,6 +20,11 @@ sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
+
+	jcenter()
+	maven {
+		url "http://maven.shadowfacts.net/"
+	}
 
 	// Put other remote maven repositories here
 
@@ -59,6 +66,9 @@ dependencies {
 	// for more info...
 	// http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
 	// http://www.gradle.org/docs/current/userguide/dependency_management.html
+
+	// add Forgelin
+	deobfCompile group: "net.shadowfacts", name: "Forgelin", version: forgelinVersion
 
 }
 
