--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 	}
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
-apply plugin: "kotlin"
+apply plugin: 'kotlin'
 //Only edit below this line, the above code adds and enables the necessary things for Forge and Kotlin to be setup.
 
 version = modMinecraftVersion + "-" + modVersion
@@ -67,8 +67,13 @@ dependencies {
 	// http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
 	// http://www.gradle.org/docs/current/userguide/dependency_management.html
 
+	// add Kotlin
+	compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+
 	// add Forgelin
-	deobfCompile group: "net.shadowfacts", name: "Forgelin", version: forgelinVersion
+	// deobfCompile group: "net.shadowfacts", name: "Forgelin", version: forgelinVersion
+
+    compile group: "net.shadowfacts", name: "Forgelin", version: forgelinVersion
 
 }
 
