--- a/gradle.properties
+++ b/gradle.properties
@@ -34,10 +34,10 @@ modMinecraftVersion = 1.12.2
 modMcpMappings = stable_39
 
 # The class in which the "@VERSION@" and "@FINGERPRINT@" strings should be replaced
-modReferenceClass = io/github/cadiboo/examplemod/util/ModReference.java
+modReferenceClass = io/github/cadiboo/examplemod/util/ModReference.kt
 
 # The Forge version the mod is being made for
 modForgeVersion = 14.23.5.2768
 
-kotlinVersion = 1.0.3
+kotlinVersion = 1.3.11
 forgelinVersion = 1.5.1
