--- a/build.gradle
+++ b/build.gradle
@@ -174,7 +174,7 @@ processResources {
 	from(sourceSets.main.resources.srcDirs) {
 		include 'META-INF/mods.toml'
 
-		// Replace version and mcversion
+		// Replace version
 		expand 'version':project.version
 	}
 
