--- a/gradle.properties
+++ b/gradle.properties
@@ -29,19 +29,18 @@ modFileName = ModName
 # modFileName = Mod-Name
 
 # The version of Minecraft we are modding for
-modMinecraftVersion = 1.13.2
+modMinecraftVersion = 1.14.2
 
 # The MCP Mappings the source code of the mod will be built against
 # MCP Mappings are in the format
 # snapshot_YYYYMMDD
 # stable_#
 # Snapshot are built nightly and stables are built at the discretion of the MCP team
-# to change your mappings change the mcpMappings property and rerun your setup (setupDecompWorkspace & setup IDE)
-# Latest 1.12.x Mappings are "snapshot_20180814"
-# Latest stable 1.12.x Mappings are "stable_39"
-# Default 1.12.x Mappings are "snapshot_20171003"
+# to change your mappings change the modMcpMappingsVersion property
+# (and the modMcpMappingsChannel property if you're switching in between stable and snapshot)
+# and then refresh the gradle project in your IDE
 modMcpMappingsChannel = snapshot
-modMcpMappingsVersion = 20190226-1.13.1
+modMcpMappingsVersion = 20190608-1.14.2
 
 # The Forge version the mod is being made for
-modForgeVersion = 25.0.219
+modForgeVersion = 26.0.8
