--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ minecraft {
 			workingDirectory project.file('run')
 
 			// Recommended logging data for a userdev environment
-			property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+			property 'forge.logging.markers', 'REGISTRIES,REGISTRYDUMP'
 
 			// Recommended logging level for the console
 			property 'forge.logging.console.level', 'debug'
