--- a/build.gradle
+++ b/build.gradle
@@ -90,7 +90,7 @@ minecraft {
 			// Recommended logging level for the console
 			property 'forge.logging.console.level', 'debug'
 
-			args '--mod', 'examplemod', '--all', '--output', file('src/generated/resources/')
+			args '--mod', modId, '--all', '--output', file('src/generated/resources/')
 
 			mods {
 				examplemod {
