--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,8 @@ minecraft {
 
 	// makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
-	// accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+	// This tells forge where our AT file is
+	accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
 	// Default run configurations.
 	// These can be tweaked, removed, or duplicated as needed.
